# tsmc-backend-fork

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: build.yml  deploy.yml  pull-request-title-validator.yml
app/: main.py
app/core/: redis.py  redis_listener.py
app/models/: base.py  earthquake.py  enums.py  response.py  settings.py
app/routers/: earthquake.py  redis.py  settings.py
app/services/: earthquake.py  metrics.py
app/utils/: logger.py  realtime_data_handler.py
app/websockets/: alerts_ws.py  manager.py
grafana/dashboards/: Earthquake.json  Earthquake_copy.json  Factory.json  Report.json  sample-dashboard.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
src/: main.py  models.py  utils.py
src/models/: earthquake.py
src/routers/: earthquake.py
src/services/: earthquake.py
tests/: conftest.py  test_earthquake.py  test_main.py
tests/core/: test_redis.py  test_redis_listener.py
tests/models/: test_custom_base_model.py  test_earthquake_models.py  test_enums.py  test_response_model.py  test_settings_model.py
tests/routers/: test_earthquake.py  test_redis.py  test_settings.py  test_websocket_client.py
tests/services/: test_earthquake.py  test_metrics.py
tests/utils/: test_logger.py  test_realtime_data_handler.py
tests/websockets/: test_manager.py
